# netcdf-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: bench-full.yml  ci.yml  codeql.yml  reference-compat.yml
docs/: benchmark-report.md
hdf5-core/: Cargo.toml
hdf5-core/src/: lib.rs
hdf5-reader/: Cargo.toml
hdf5-reader/fuzz/: Cargo.toml
hdf5-reader/fuzz/corpus/fuzz_hdf5_open/: chunked_lz4.h5  chunked_shuffle_deflate.h5  committed_dtype.h5  compound_type.h5  dense_groups.h5  fletcher32.h5  multi_dim_4d.h5  nested_groups.h5  old_format_v1.h5  simple_chunked_deflate.h5  single_chunk.h5
hdf5-reader/fuzz/fuzz_targets/: fuzz_hdf5_chunked_reads.rs  fuzz_hdf5_open.rs
hdf5-reader/src/: attribute_api.rs  btree_v1.rs  btree_v2.rs  cache.rs  checksum.rs  chunk_index.rs  dataset.rs  datatype_api.rs  error.rs  extensible_array.rs  fixed_array.rs  fractal_heap.rs  global_heap.rs  group.rs  io.rs  lib.rs  local_heap.rs  object_header.rs  reference.rs  shared_message_table.rs  storage.rs  superblock.rs  symbol_table.rs
hdf5-reader/src/filters/: deflate.rs  fletcher32.rs  lz4.rs  mod.rs  nbit.rs  scaleoffset.rs  shuffle.rs
hdf5-reader/src/messages/: attribute.rs  attribute_info.rs  btree_k.rs  continuation.rs  dataspace.rs  datatype.rs  external_files.rs  fill_value.rs  filter_pipeline.rs  group_info.rs  layout.rs  link.rs  link_info.rs  mod.rs  modification_time.rs  shared.rs  shared_table.rs  symbol_table_msg.rs
hdf5-reader/tests/: corruption.rs  integration.rs  property_tests.rs
hdf5-writer/: Cargo.toml
hdf5-writer/src/: lib.rs
hdf5-writer/tests/: external_validation.rs  planner.rs  roundtrip.rs
netcdf-core/: Cargo.toml
netcdf-core/src/: lib.rs
netcdf-reader/: Cargo.toml
netcdf-reader/benches/: compare_georust.rs
netcdf-reader/fuzz/: Cargo.toml
netcdf-reader/fuzz/corpus/fuzz_netcdf_from_bytes/: attr_cdf5.nc  cdf1_simple.nc  cdf2_large_offset.nc  cdf5_new_types.nc  global_attrs.nc  multi_var.nc  record_vars.nc  ref_multi_rec.nc  ref_single_rec.nc
netcdf-reader/fuzz/fuzz_targets/: fuzz_netcdf_from_bytes.rs
netcdf-reader/src/: error.rs  lib.rs  masked.rs  types.rs  unpack.rs  user_defined.rs
netcdf-reader/src/cf/: axes.rs  bounds.rs  crs.rs  mod.rs  time.rs
netcdf-reader/src/classic/: data.rs  header.rs  mod.rs  storage.rs  types.rs  variable.rs
netcdf-reader/src/nc4/: attributes.rs  dimensions.rs  groups.rs  mod.rs  types.rs  variables.rs
netcdf-reader/tests/: cf_integration.rs  classic_slice_parity.rs  dos_resistance.rs  integration.rs  prop_mutation.rs  property_tests.rs
netcdf-writer/: Cargo.toml
netcdf-writer/src/: lib.rs
netcdf-writer/tests/: classic_roundtrip.rs  external_validation.rs  nc4_roundtrip.rs  prop_roundtrip.rs
scripts/: criterion_summary.py  generate-fixtures.sh  run-benchmark-ci-check.sh  run-benchmark-smoke.sh  validate-writer-output.sh
testdata/: generate_fixtures.py  generate_parallel_compat_fixtures.sh  validate_writer_files.py
testdata/hdf5/: btree_v2_chunked.h5  chunked_lz4_zeros.h5  dense_groups.h5  extensible_array_chunked.h5  fill_value.h5  fixed_array_chunked.h5  large_chunked.h5  scalar_dataset.h5  simple_contiguous.h5  string_attrs.h5  v4_layout.h5  vlen_strings.h5
testdata/netcdf4/: dense_empty_attributes.nc  nc4_basic.nc  nc4_classic_model.nc  nc4_compressed.nc  nc4_groups.nc  nc4_unlimited.nc  same_size_dims.nc
testdata/parallel/: parallel_nc4_compat.nc
testdata/pnetcdf/: pnetcdf_cdf1_fixed.nc  pnetcdf_cdf2_interleaved_records.nc  pnetcdf_cdf5_unsigned_int64.nc
