[workspace]
members = [
    "hdf5-core",
    "hdf5-reader",
    "hdf5-writer",
    "netcdf-core",
    "netcdf-reader",
    "netcdf-writer",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roteiro-gis/netcdf-rust"
homepage = "https://github.com/roteiro-gis/netcdf-rust"

[workspace.dependencies]
ndarray = "0.17"
thiserror = "2"
memmap2 = "0.9"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
