[package]
name = "hdf5-writer"
description = "Pure-Rust HDF5 writer architecture and encoding utilities"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/hdf5-writer"
keywords = ["hdf5", "encoder", "scientific-data"]
categories = ["science", "encoding"]

[dependencies]
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
hdf5-core = { version = "0.8.0", path = "../hdf5-core" }
thiserror = { workspace = true }

[dev-dependencies]
hdf5-reader = { version = "0.8.0", path = "../hdf5-reader" }
tempfile = "3"
