[package]
name = "netcdf-writer"
description = "Pure-Rust NetCDF encoder for classic and NetCDF-4 data models"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/netcdf-writer"
keywords = ["netcdf", "encoder", "scientific-data"]
categories = ["science", "encoding"]

[dependencies]
netcdf-core = { version = "0.8.0", path = "../netcdf-core" }
hdf5-writer = { version = "0.8.0", path = "../hdf5-writer", optional = true }
thiserror = { workspace = true }

[features]
default = ["netcdf4"]
netcdf4 = ["dep:hdf5-writer"]

[dev-dependencies]
netcdf-reader = { version = "0.8.0", path = "../netcdf-reader" }
serde_json = "1"
tempfile = "3"
