[package]
name = "hdf5-reader-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hdf5-reader = { path = ".." }

[[bin]]
name = "fuzz_hdf5_open"
path = "fuzz_targets/fuzz_hdf5_open.rs"
test = false
doc = false
bench = false
